<resources>
    <string name="app_name">HizliGeliyoTask</string>
    <string name="hesap_giris_header">Hesabına Giriş Yap</string>
    <string name="forgot_passowrd_text">Şifremi unuttum</string>
    <string name="hint_password">Şifre</string>
    <string name="sign_up_text">Kaydol</string>
    <string name="account_text">Hesabın yok mu?</string>
    <string name="button_log_in_text">Giriş yap</string>
    <string name="mail">Mail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price_tag">%1s TL</string>
    <string name="search_edittext_hint">Kategori veya ürün ara</string>
    <string name="sort_button_text">Sırala</string>
    <string name="filtre">Filtre</string>
    <string name="categories_title">Kategoriler</string>
    <string name="filter_button_text">Filtrele</string>
    <string name="cheap_to_expensive">Önce en ucuz</string>
    <string name="expensive_to_cheap">Önce en pahalı</string>
    <string name="custom_mail">hizligeliyo@gmail.com</string>
    <string name="custom_name">Ertuğrul KOÇ</string>
    <string name="custom_wallet">Bakiye: 3486.00 ₺</string>
    <string name="categories">Categories</string>
    <string name="discounts">Discounts</string>
</resources>