<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.activity.LoginActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="26dp"
        android:background="@null"
        android:src="@drawable/ic_back_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="132dp"
        android:paddingStart="33dp"
        android:paddingEnd="48dp"
        app:layout_constraintBottom_toTopOf="@id/image_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_app"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/titillium_regular"
            android:text="@string/hesap_giris_header"
            android:textColor="@color/text_color_regular"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_icon" />

        <EditText
            android:id="@+id/edittext_mail_adress"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="4dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_edittext"
            android:elevation="5dp"
            android:fontFamily="@font/titillium_regular"
            android:gravity="center"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <EditText
            android:id="@+id/edittext_mail_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="4dp"
            android:autofillHints="password"
            android:background="@drawable/background_edittext"
            android:elevation="5dp"
            android:fontFamily="@font/titillium_regular"
            android:gravity="center"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/text_color_regular"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_mail_adress" />


        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/titillium_regular"
            android:text="@string/forgot_passowrd_text"
            android:textColor="@color/text_color_regular"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="@id/edittext_mail_adress"
            app:layout_constraintTop_toBottomOf="@id/edittext_mail_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:background="@drawable/background_login_button"
            android:fontFamily="@font/titillium_regular"
            android:text="@string/button_log_in_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_forgot_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:id="@+id/txt_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/titillium_regular"
                android:text="@string/account_text"
                android:textColor="@color/text_color_regular"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_regular"
                android:text="@string/sign_up_text"
                android:textColor="@color/text_color_blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>