<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background"
    tools:context=".ui.fragment.AccountFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_circle"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_account"
                app:civ_border_color="@color/button_background_yellow_color"
                app:civ_border_width="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/titillium_semibold"
                android:text="@string/custom_mail"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@id/imageview_circle"
                app:layout_constraintRight_toRightOf="@id/imageview_circle"
                app:layout_constraintTop_toBottomOf="@id/imageview_circle" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/titillium_semibold"
                android:text="@string/custom_name"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="@id/imageview_circle"
                app:layout_constraintRight_toRightOf="@id/imageview_circle"
                app:layout_constraintTop_toBottomOf="@id/item_mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/titillium_semibold"
                android:text="@string/custom_wallet"
                android:textColor="@color/orange_background"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>